fonts, primeira secao, topo

--- a/_content.scss
+++ b/_content.scss
@@ -1,169 +1,67 @@
 div#content{
-
-	section#descricao{
-		padding-top:80px;
-		padding-bottom:20px;
-		background-color:#FFF;
-		text-align:center;
-
-		.box{
-			border:1px solid #abb1b8;
-			border-radius:20px;
-			padding-bottom:20px;
-
-			img{
-				border-top-right-radius: 20px;
-				border-top-left-radius: 20px;
-			}
-		}
-
-		h2{
-			margin-bottom:25px;
-		}
-
-		.col-md-3,.col-md-4{
-			margin-bottom:60px;
-		}
-
-		h3{
-			margin-top:20px;
-			margin-bottom:10px;
-			color:#61235f;
-		}
-
-		hr{
-			border-top:2px solid #61235f;
-			width:20%;
-		}
-
-		p{
-			font-size:16px;
-			padding-bottom:0px;
-			line-height:1.6;
-			color:#abb1b8;
-		}
-
-		a{
-			color:#61235f;
-			font-weight:bold;
-		}
-	}
-
-	section#detalhes{
-		padding-top:80px;
-		padding-bottom:20px;
-		background-color:#FFF;
-
-		img{
-			border-top-right-radius: 20px;
-			border-top-left-radius: 20px;
-		}
-
-		h3{
-			margin-top:20px;
-			margin-bottom:10px;
-			color:#61235f;
-		}
-
-		hr{
-			border-top:2px solid #61235f;
-			width:15%;
-			text-align:left;
-			margin-left: 0;
-		}
-
-		.col-md-7{
-			padding-left:35px;
-		}
-	}
-
-	section#sobre-detalhes{
-		padding-top:80px;
-		padding-bottom:20px;
-		background-color:#FFF;
-
-		h1{
-			margin-bottom:25px;
-		}
-
-		p{
-			font-size:16px;
-			line-height:1.7;
-		}
-
-		.alexb{
-			color:#faac11;
-		}
-
-		img{
-			margin-bottom:20px;
-		}
-
-	}
-
-	section#sobre{
-		padding:160px 0;
-		background-image: url("images/background2.jpg");
+	.bcg{
+		width: 100%;
+		background-image: url("images/military-background1.jpg");
 	    -webkit-background-size: cover;
 		-moz-background-size: cover;
 		-o-background-size: cover;
 		background-size: cover;
 		background-repeat: no-repeat;
-		background-position: center top;
-	    background-color: #050304;
+		background-position: center 77px;
 	    background-attachment: fixed;
-	    color:#FFF;
-	    text-align:left;
+		.container{
+			padding-top:140px;
+			padding-bottom:400px;
+		    position:relative;
 
-		h1{
-			color:#FFF;
-			margin-bottom:25px;
-		}
+		    h1{
+		    	margin-bottom:25px;
+		    }
 
-		p{
-			font-size:16px;
-			color:#FFF;
-			line-height:1.7;
-		}
+		    img.logo{
+		    	margin-bottom:25px;
+		    }
 
-		.alexb{
-			color:#faac11;
-		}
+		    .separador{
+		    	margin-bottom:25px;
+		    }
 
-		img{
-			margin-bottom:20px;
-		}
+		    p{
+		    	color:#FFF;
+		    }
+
+		    .video {
+		    	position:absolute;
+		    	bottom:-300px;
+		    }
+	    }
 	}
 
-	section#fale-conosco{
-		padding-top:80px;
-		padding-bottom:20px;
-		background-color:#FFF;
+	.bcgb{
+		height: 100vh;
+		width: 100%;
+		background-image: url("images/military-background2.jpg");
+	    -webkit-background-size: cover;
+		-moz-background-size: cover;
+		-o-background-size: cover;
+		background-size: cover;
+		background-repeat: no-repeat;
+		background-position: center 77px;
 	}
-
-	section#contato{
-		padding:100px 0;
-		background-color:#FFF;
-
-		h3{
-			font-weight:bold;
-			color:#000;
-			margin-bottom:10px;
-		}
-
-		.fone{
-			font-size:28px;
-		}
+	.bcgc{
+		height: 100vh;
+		width: 100%;
+		background-image: url("images/military-background3.jpg");
+	    -webkit-background-size: cover;
+		-moz-background-size: cover;
+		-o-background-size: cover;
+		background-size: cover;
+		background-repeat: no-repeat;
+		background-position: center 77px;
+	    background-attachment: fixed;
 	}
 }
 @media (max-width: 991px) {
-	section#sobre{
-	    -webkit-background-size: auto !important;
-		-moz-background-size: auto !important;
-		-o-background-size: auto !important;
-		background-size: auto !important;
-		background-position: -300px top !important;
-	}
 
 }
 
