--- a/style.scss
+++ b/style.scss
@@ -22,44 +22,27 @@ Nicolas Gallagher and Jonathan Neal http://necolas.github.com/normalize.css/
 
  
 @font-face {
-    font-family: Alex Brush;
-    src: url(font/AlexBrush-Regular.ttf);
+    font-family: Aller Light;
+    src: url(font/Aller_Lt.ttf);
+}
+
+@font-face {
+    font-family: Bebas Neue;
+    src: url(font/BebasNeue-Regular.ttf);
 }
 
 
 #page{
-	background-color:#f9f2e8;
-	font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
+	background-color:#FFFFFF;
+	font-family: Aller Light, Arial, "Helvetica Neue", Helvetica, sans-serif;
 	color:#31302f;
 	text-align:center;
 	font-size:18px;
 
-	.alexa{
-		font-family: Alex Brush, Arial, "Helvetica Neue", Helvetica, sans-serif !important;
-		color:#faac11;
-		padding:0 !important;
-		line-height:0.6 !important;
-		font-size:66px !important;
-	}
-	.alexb{
-		font-family: Alex Brush, Arial, "Helvetica Neue", Helvetica, sans-serif !important;
-		color:#faac11;
-		padding:0 !important;
-		line-height:0.6 !important;
-		font-size:66px !important;
+	p{
+		line-height:1.9;
 	}
 
-	.alexc{
-		font-family: Alex Brush, Arial, "Helvetica Neue", Helvetica, sans-serif !important;
-		color:#61235f;
-		padding:0 !important;
-		line-height:0.6 !important;
-		font-size:66px !important;
-	}
-
-	.insta{
-		font-size:80px;
-	}
 
 	a{
 		color:#31302f;
@@ -70,200 +53,48 @@ Nicolas Gallagher and Jonathan Neal http://necolas.github.com/normalize.css/
 	}
 
 	h1{
-		font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
+		font-family: Bebas Neue, Arial, "Helvetica Neue", Helvetica, sans-serif;
 		margin: 0;
 		font-size: 42px;
-		color:#61235f;
+		color:#292929;
 	}
 
 	h2{
-		font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
+		font-family: Bebas Neue, Arial, "Helvetica Neue", Helvetica, sans-serif;
 		margin: 0;
 		font-size: 42px;
-		color:#61235f;
+		color:#292929;
 	}
 
 	h3{
-		font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
+		font-family: Bebas Neue, Arial, "Helvetica Neue", Helvetica, sans-serif;
 		margin: 0;
 		font-size: 22px;
-		color:#61235f;
+		color:#292929;
 	}
 
 	h4{
-		font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
+		font-family: Bebas Neue, Arial, "Helvetica Neue", Helvetica, sans-serif;
 		font-size: 18px;
-		color:#31302f;
+		color:#292929;
 	}
 
 	h5{
-		font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
+		font-family: Bebas Neue, Arial, "Helvetica Neue", Helvetica, sans-serif;
 		font-size:14px;
-		color:#31302f;
+		color:#292929;
 	}
 
-	.videoWrapperb {
-	    position: relative;
-	    padding-bottom: 56.25%; /* 16:9 */
-	    padding-top: 25px;
-	    height: 0;
-	}
-	.videoWrapperb iframe {
-	    position: absolute;
-	    top: 0;
-	    left: 0;
-	    width: 100%;
-	    height: 100%;
-	}	
-
-	.videoWrapper {
-		-webkit-filter: grayscale(100%);
-		filter: grayscale(100%);
-	    position: relative;
-	    padding-bottom: 40%; /* 16:9 */
-	    padding-top: 25px;
-	    height: 0;
-	}
-	.videoWrapper iframe {
-	    position: absolute;
-	    top: 0;
-	    left: 0;
-	    width: 100%;
-	    height: 100%;
-	}	
-
-
-	.btn-semfundo{
-		background-color:transparent;
-		padding:25px 35px;
-		-webkit-transition: background 0.5s ease-in-out;
-        -moz-transition: background 0.5s ease-in-out;
-        -o-transition: background 0.5s ease-in-out;
-        -ms-transition: background 0.5s ease-in-out; 
-        transition: background 0.5s ease-in-out;
-	}
-
-	.btn-rosa{
-		border:2px solid #f35353;
-		color:#f35353;
-	}
-
-	.btn-rosa:hover{
-		background-color:#f35353;
-		color:#FFF;
-	}
-
-	.btn-amarelo{
-		border:2px solid #faac11;
-		color:#faac11;
-	}
-
-	.btn-amarelo:hover{
-		background-color:#faac11;
-		color:#FFF;
-	}
-
-	.bx-wrapper .bx-viewport{
-		margin-top: 10px;
-		-webkit-box-shadow: 0 0 0px ; 
-	    box-shadow: 0 0 0px ; 
-	    border: 0px solid white; 
-	    left: 0px;
-
-		.bx-clone{
-		   display: none !important;
-		} 		
-	}
-
-	.input-message{
-		background-color:#efc031;
-		text-align:left;
-		border:0;
-		width:100%;
-		border-radius:50px;
-		margin-bottom:10px;
-		padding:20px;
-	}
-
-	.input-message::placeholder{
-		color:#9e3a27 !important;
-	}
-
-	.input-contato {
-		background-color:#FFF;
-		text-align:left;
-		border:1px solid #abb1b8;
-		width:100%;
-		margin-bottom:10px;
-		padding:5px 20px;
-	}
-	.input-contato::placeholder{
-		color:#9e3a27 !important;
-	}
-
-	.input-contato:active,.input-contato:hover,.input-contato:focus,.input-message:active,.input-message:hover,.input-message:focus{
-		border:0;
-		outline:0;
-	}
-
-
-	.btn-contato{
-		padding:5px 0;
-		border:0;
-		width:190px;
-		background-color:#950e19;
-		border:1px solid #f9f2e8;
-		color:#FFF;
-		border-radius:50px;
-		-webkit-transition: all 0.5s ease-in-out;
-        -moz-transition: all 0.5s ease-in-out;
-        -o-transition: all 0.5s ease-in-out;
-        -ms-transition: all 0.5s ease-in-out; 
-        transition: all 0.5s ease-in-out;
-	}
-
-	.btn-contato:hover{
-		background-color:#FFF !important;
-		color:#950e19 !important;
-	}
-
-	.input-news {
-		background-color:#FFF;
-		text-align:center;
-		border:0;
-		width:200px;
-		border-radius:50px;
-		margin-bottom:10px;
-		padding:5px 0;
-	}
-
-	.btn-news{
-		padding:5px 0;
-		border:0;
-		width:190px;
-		background-color:#ed4021;
-		color:#FFF;
-		border-radius:50px;
-		-webkit-transition: all 0.5s ease-in-out;
-        -moz-transition: all 0.5s ease-in-out;
-        -o-transition: all 0.5s ease-in-out;
-        -ms-transition: all 0.5s ease-in-out; 
-        transition: all 0.5s ease-in-out;
-	}
-
-	.btn-news:hover{
-		background-color:#FFF !important;
-		color:#ed4021 !important;
-	}
-
-	.roxo{
-		color:#662864;
+	.separador{
+		border-top:8px solid #292929;
+		width:80px;
 	}
 
 	@import 'header';
 	@import 'content';
 	@import 'footer';
-
+	
+	.wow { visibility: hidden; }
 
 }
 
