--- a/_content.scss
+++ b/_content.scss
@@ -1,5 +1,5 @@
-div#content{
-	.bcg{
+#content{
+	#bcg{
 		width: 100%;
 		background-image: url("images/military-background1.jpg");
 	    -webkit-background-size: cover;
@@ -23,7 +23,7 @@ div#content{
 		    }
 
 		    .separador{
-		    	margin-bottom:25px;
+		    	margin-bottom:35px;
 		    }
 
 		    p{
@@ -33,12 +33,12 @@ div#content{
 		    .video {
 		    	position:absolute;
 		    	bottom:-300px;
+		    	z-index:1000;
 		    }
 	    }
 	}
 
-	.bcgb{
-		height: 100vh;
+	#bcgb{
 		width: 100%;
 		background-image: url("images/military-background2.jpg");
 	    -webkit-background-size: cover;
@@ -46,10 +46,28 @@ div#content{
 		-o-background-size: cover;
 		background-size: cover;
 		background-repeat: no-repeat;
-		background-position: center 77px;
+		background-position: center top;
+
+		.container{
+			padding-top:400px;
+			padding-bottom:200px;
+
+		    h2{
+		    	margin-bottom:25px;
+		    	color:#f7aa0f;
+		    }
+
+		    h3{
+		    	margin-bottom:25px;
+		    }
+
+		    .separador{
+		    	margin-bottom:35px;
+		    }
+	    }
 	}
-	.bcgc{
-		height: 100vh;
+
+	#bcgc{
 		width: 100%;
 		background-image: url("images/military-background3.jpg");
 	    -webkit-background-size: cover;
@@ -59,6 +77,133 @@ div#content{
 		background-repeat: no-repeat;
 		background-position: center 77px;
 	    background-attachment: fixed;
+	    .container{
+			padding-top:100px;
+			padding-bottom:200px;
+			position:relative;
+
+		    h2{
+		    	margin-bottom:25px;
+		    }
+
+		    h3{
+		    	margin-bottom:25px;
+		    }
+
+		    .separador{
+		    	margin-bottom:35px;
+		    }
+
+		    p{
+		    	color:#FFF;
+		    }
+		    .military-base{
+		    	position:absolute;
+		    	bottom:60px;
+		    	right:15px;
+		    }
+	    }
+	}
+
+	#bcgd{
+		width: 100%;
+		background-image: url("images/military-background4.jpg");
+	    -webkit-background-size: cover;
+		-moz-background-size: cover;
+		-o-background-size: cover;
+		background-size: cover;
+		background-repeat: no-repeat;
+		background-position: center top;
+
+		.container{
+			padding-top:100px;
+			padding-bottom:500px;
+		    position:relative;
+
+		    h2{
+		    	margin-bottom:25px;
+		    }
+
+		    img.logo{
+		    	margin-bottom:25px;
+		    }
+
+		    .separador{
+		    	margin-bottom:35px;
+		    }
+
+
+		    .cronograma {
+		    	position:absolute;
+		    	bottom:-700px;
+		    }
+	    }
+	}
+
+	#bcge{
+		width: 100%;
+		background-image: url("images/military-background5.jpg");
+	    -webkit-background-size: cover;
+		-moz-background-size: cover;
+		-o-background-size: cover;
+		background-size: cover;
+		background-repeat: no-repeat;
+		background-position: center 77px;
+	    background-attachment: fixed;
+	    .container{
+			padding-top:260px;
+			padding-bottom:200px;
+		    position:relative;
+
+		    h2{
+		    	margin-bottom:25px;
+		    }
+
+		    h3{
+		    	margin-bottom:25px;
+		    }
+
+		    .separador{
+		    	margin-bottom:35px;
+		    	margin-top:80px;
+		    }
+
+		    p{
+		    	color:#FFF;
+		    }
+	    }
+	}
+
+	#bcgf{
+		width: 100%;
+		background-image: url("images/military-background6.jpg");
+	    -webkit-background-size: cover;
+		-moz-background-size: cover;
+		-o-background-size: cover;
+		background-size: cover;
+		background-repeat: no-repeat;
+		background-position: center top;
+
+		.container{
+			padding-top:200px;
+			padding-bottom:200px;
+		    position:relative;
+
+		    h2{
+		    	margin-bottom:25px;
+		    }
+
+		    .tel{
+		    	color:#f7aa0f;
+		    	font-size:40px;
+		    	font-family: Bebas Neue, Arial, "Helvetica Neue", Helvetica, sans-serif;
+		    }
+
+		    .separador{
+		    	margin-bottom:35px;
+		    }
+
+	    }
 	}
 }
 @media (max-width: 991px) {
